--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "black_box_optimization"]
 	path = black_box_optimization
 	url = git@github.com:drewm1980/black_box_optimization.git
+[submodule "extern/xopencv"]
+	path = extern/xopencv
+	url = git@github.com:markreyn/opencv.git
